# Ant-Life-Simulator

./: .gitignore  CMakeLists.txt  README.md  antworld.svg.example
include/core/: Config.hpp  Utils.hpp  World.hpp
include/entities/: Anthill.hpp  Food.hpp  Pheromone.hpp
include/entities/Ant/: Ant.hpp  SoldierAnt.hpp  WorkerAnt.hpp
include/entities/Enemy/: Beetle.hpp  Cigarette.hpp  Enemy.hpp
include/rendering/: RaylibRwnderer.hpp  Renderer.hpp
src/entitles/Ant/: Ant.cpp
